--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -75,8 +75,9 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          provenance: ${{ github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/v') }}
-          sbom: ${{ github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/v') }}
+          # provenance: ${{ github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/v') }}
+          provenance: false
+          sbom: false
           build-args: |
             SOURCE_BRANCH=${{ github.ref_name }}
             SOURCE_COMMIT=${{ github.sha }}
