--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -75,7 +75,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          # provenance: ${{ github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/v') }}
           provenance: false
           sbom: false
           build-args: |
@@ -92,7 +91,7 @@ jobs:
           subject-name: ${{ github.repository }}
           subject-digest: ${{ steps.push.outputs.digest }}
 
-      - name: Verify OCI Image
+      - name: Verify OCI image
         if: success() && github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/v')
         run: gh attestation verify --owner ${{ github.repository_owner }} oci://ghcr.io/${{ github.repository }}@${{ steps.push.outputs.digest }}
         env:
